--- a/helix/.config/helix/languages.toml
+++ b/helix/.config/helix/languages.toml
@@ -1,9 +1,11 @@
 [[language]]
 name = "toml"
 formatter = { command = "taplo", args = ["format", "-"] }
-auto-format = true
 
 [[language]]
 name = "rust"
 formatter = { command = "rustfmt" }
 auto-format = true
+
+[language-server.rust-analyzer.config.files]
+watcher = "server"
